libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-expr-call-not-path.jsonc
//@ run: fail
//@ description: calling something that isn't a path should result in a compile error
[
  "::kernel::special_form::as",
  { "#literal": true },
  [
    ["+", { "#literal": 1 }, { "#literal": 2 }],
    //~^ ERROR Function call with non-path callee cannot be used as a type
    "Int",
    "Float"
  ]
]
